# external-knowledge-codegen

./: .gitattributes  .gitignore  README.md  README_concode.md  concode2conala.py  conda-env.yml  env.sh  evaluation.py  exp.py  finetune-conala.slurm  llm_env_requirements.txt  package-list.txt  pretrain-conala.slurm  pyproject.toml  requirements-llm.txt  requirements.txt  sbatch_conala_dataset_generate.sh  setup.cfg  test.py  train-concode.slurm
asdl/lang/cpp/: cpp_asdl.simplified.txt
asdl/lang/cpp/cppastor/: code_gen.py
asdl/lang/cpp/test/: array.hpp  type_alias.hpp
cpplang/: parser.py  tree.py
data/concode/: concode_test.json  concode_valid.json
scripts/conala/: finetune.sh  finetune2.sh  finetune_api.sh  finetune_retrieved.sh  finetune_retrieved_distsmpl.sh  finetune_retrieved_only.sh  pretrain2.sh  rerank.sh  sbatch_train.sh  train.sh  train_apidocs.sh  train_para.sh  train_pre.sh  train_recon.sh  train_retrieved.sh  train_retrieved_distsmpl.sh  train_retrieved_only.sh  vanilla.sh
scripts/conala-llm/: dataset-preprocess-llm.slurm  dataset.sh  finetune.sh  finetune_retrieved_distsmpl.sh  test.sh  train_pre.sh
scripts/concode/: finetune_retrieved_only.sh  generate-samples.sh  sbatch_train.sh  train-20210526.sh  train-20210527.sh  train.sh
src/asdl/: actions.py  hypothesis.py  transition_system.py
src/asdl/lang/cpp/: demo.py
src/asdl/lang/java/: java_transition_system.py
src/asdl/lang/lambda_dcs/: lambda_dcs_transition_system.py
src/asdl/lang/prolog/: prolog_transition_system.py
src/asdl/lang/py/: py_asdl_helper.py
src/asdl/lang/py3/: py3_transition_system.py
src/bert_encoder_model/: model.py
src/common/: utils.py
src/components/: action_info.py  dataset.py
src/cpplang/: JSONDumpTypes.cpp  parse.py  parser.py
src/datasets/codagen/: codagen_eval.py  dataset.py  evaluator.py  example_processor.py
src/datasets/conala/: dataset.py  evaluator.py  llm_preprocess_generate.py  util.py
src/datasets/concode/: dataset.py  evaluator.py  util.py
src/model/: nn_utils.py  parser.py  seq2seq.py  seq2seq_copy.py  transformer_with_pretrained_bert.py
