[project]
name = "ekcg"
version = "0.0.1"
description = "External Knowledge Code Generation"
requires-python = ">=3.7,<3.8"
dependencies = [
  #fairseq from patched sources
#  "fairseq@git+ssh://git@is154588.intra.cea.fr:10122/multimedia/fairseq.git@v0.9.0-patches",
  "fairseq@git+ssh://git@github.com/aymara/fairseq.git@v0.9.0-patches",
  "astor==0.7.1",
  "clang==14.0",
  "colorama",
  "libclang",
  "nltk",
  "six",
  "torch",
  "transformers",
  "xgboost",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

