[metadata]
name = External Knowledge Code Generation
description = Code and resources for the ACL20 paper "Incorporating External Knowledge through Pre-training for Natural Language to Code Generation".
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/kleag/external-knowledge-codegen
author = Frank F. Xu et al.
license = Apache 2.0
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache 2.0
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: NLP
project_urls =
    Documentation = https://github.com/kleag/external-knowledge-codegen/blob/main/README.md
    Source = https://github.com/kleag/external-knowledge-codegen
    Tracker = https://github.com/kleag/external-knowledge-codegen/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
python_requires = >=3.7
setup_requires =


[bdist_wheel]
universal = 1

[aliases]
test=pytest

